<resources>
	<string name="app_name">cue</string>
	<string name="button_interested">interested</string>
	<string name="button_bookmarked">bookmarked</string>
	<string name="button_bookmark">bookmark</string>
	<string name="button_follow">follow</string>
	<string name="button_following">following</string>
	<string name="tags">Tags</string>
	<string name="tab_discover"><b>Discover</b></string>
	<string name="tab_for_you"><b>For You</b></string>
	<string name="tab_my_events"><b>My Events</b></string>
	<string name="tab_profile"><b>Profile</b></string>
	<string name="page_all_events"><b>All Events</b></string>

	<string name="event_starts">Starts</string>
	<string name="event_going">Going</string>

	<string name="see_more">see more</string>
	<string name="section_popular">Popular</string>
	<string name="section_today_events">Today\'s events</string>
	<string name="section_tomorrow_events">Tomorrow\'s events</string>
	<string name="see_all">see all</string>
	<string name="more">more</string>

	<string name="section_about">about</string>
	<string name="section_events">events</string>
	<string name="header_website">Website</string>
	<string name="header_email">Email</string>
	<string name="header_bio">Bio</string>

	<string name="numGoing">%1$d Going</string>

	<string name="settings">Settings</string>
	<string name="settings_reminders">Event Reminders</string>
	<string name="settings_notify_me">Notify Me</string>
	<string name="settings_net_id">NetID</string>

	<string name="onboarding_welcome">Welcome</string>
	<string name="onboarding_welcome_description">Get started with cue, a blah blah blah blah</string>
	<string name="onboarding_get_started">Get Started</string>
	<string name="onboarding_next">Next</string>
	<string name="onboarding_interact">Interact</string>
	<string name="onboarding_interact_description">Choose the on-campus organizations that you would like to follow. We’ll show you more events from the organizations you pick.</string>
	<string name="onboarding_explore">Explore</string>
	<string name="onboarding_explore_description">Finally, tell us your interests. We’ll tailor your feed to include events you’ll be interested in.</string>
	<string name="onboarding_done">Done</string>
	<string name="onboarding_error">Please log in with your NetID</string>
	<string name="menu_search">Search</string>

	<string name="update_available">A New Update is Available</string>
	<string name="update_by_app_store">Please navigate to the Google Play Store to update to the latest version.</string>
</resources>
