<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:paddingTop="@dimen/spacing_4l"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/leftGuide"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintGuide_begin="@dimen/spacing_xxl" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/rightGuide"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintGuide_end="@dimen/spacing_xxl" />

	<TextView
		android:id="@+id/interact"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/onboarding_interact"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintLeft_toLeftOf="@+id/leftGuide"
		style="@style/PageTitle" />

	<TextView
		android:id="@+id/interactDescription"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:text="@string/onboarding_interact_description"
		android:layout_marginTop="@dimen/spacing_l"
		app:layout_constraintTop_toBottomOf="@+id/interact"
		app:layout_constraintLeft_toLeftOf="@+id/leftGuide"
		app:layout_constraintRight_toRightOf="@+id/rightGuide"
		style="@style/P1"/>

	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/organizationsRecycler"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_marginTop="@dimen/spacing_xl"
		android:orientation="vertical"
		android:paddingBottom="@dimen/spacing_5l"
		android:clipToPadding="false"
		app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
		app:layout_constraintLeft_toLeftOf="@+id/leftGuide"
		app:layout_constraintRight_toRightOf="@+id/rightGuide"
		app:layout_constraintTop_toBottomOf="@+id/interactDescription"
		app:layout_constraintBottom_toBottomOf="parent"
		tools:listitem="@layout/item_organization" />


	<Button
		android:id="@+id/nextButton"
		style="@style/mainButton"
		android:layout_width="160dp"
		android:layout_height="wrap_content"
		android:layout_marginBottom="@dimen/spacing_xl"
		android:background="@drawable/bg_round_button_light_red"
		android:text="@string/onboarding_next"
		android:textColor="@android:color/white"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>